fix: og-card vertical alignment, og-toggle line-height, og-list value font-size and line-height

--- a/src/components/og-card/og-card.scss
+++ b/src/components/og-card/og-card.scss
@@ -44,6 +44,10 @@
     --og-card__footer-TextAlign:        right;
 
     box-sizing: border-box;
+    display: inline-block;
+    vertical-align: top;
+    width: 100%;
+    
     *, *::before, *::after { box-sizing: inherit; }
 }
 
