--- a/src/components/og-list/og-list.scss
+++ b/src/components/og-list/og-list.scss
@@ -111,5 +111,5 @@
 }
 
 .og-list__item__value {
-    font-size: 2em;
+    line-height: inherit;
 }
